--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav> <div class="logo_lines">
                     <div class="logo">facebook</div>
                         <div class="horizon">
-                            <hr><hr><hr>
+                            ☰
                         </div>
         </div>
             
@@ -50,6 +50,6 @@
             <div class="bottom"><strong>Create a page</strong> for a celebrity, brand or business</div>
         </div>
     </div>
-    
+    <script src="app.js"></script>
 </body>
 </html>
